--- a/app_commerce/pubspec.yaml
+++ b/app_commerce/pubspec.yaml
@@ -37,8 +37,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+
   uses-material-design: true
 
-
-#assets:
-#   -  images/A_dot_burr.jpeg
+  assets:
+    - assets/images/
